--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
+    "leaflet-map": "^0.2.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   },
