--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
     "express": "~4.15.5",
+    "firebase-admin": "^5.11.0",
     "hbs": "~4.0.1",
     "leaflet-map": "^0.2.1",
     "morgan": "~1.9.0",
