--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "leaflet": "^1.3.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-leaflet": "^1.9.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   },
