--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "flow-bin": "^0.66.0",
+    "flow-bin": "^0.69.0",
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "firebase": "^4.12.1",
+    "firebaseui": "^2.7.0",
+    "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-firebaseui": "^1.2.3",
     "react-leaflet": "^1.9.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
