--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "firebaseui": "^2.7.0",
     "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
-    "loadash": "^1.0.0",
+    "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
