--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
     "material-ui": "^0.20.0",
+    "mockfirebase": "^0.12.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
