--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "chai": "^4.1.2",
     "firebase": "^4.12.1",
     "firebaseui": "^2.7.0",
     "geofire": "^4.1.2",
@@ -21,7 +22,9 @@
     "react-firebaseui": "^1.2.3",
     "react-leaflet": "^1.9.1",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
