--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.69.0",
-    "prettier": "1.11.1",
+    "prettier": "^1.11.1",
     "react-scripts": "1.1.1"
   },
   "dependencies": {
