--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
     "flow-bin": "^0.69.0",
     "prettier": "^1.11.1",
     "react-scripts": "1.1.1"
