--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "firebaseui": "^2.7.0",
     "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.42",
+    "material-ui-bottom-sheet": "^0.5.1",
     "mockfirebase": "^0.12.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
+    "react-compound-slider": "^0.11.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.3.0",
     "react-firebaseui": "^1.2.3",
     "react-leaflet": "^1.9.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sinon": "^4.5.0",
-    "sinon-chai": "^3.0.0"
+    "sinon-chai": "^3.0.0",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
