--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "chai": "^4.1.2",
     "firebase": "^4.12.1",
     "firebaseui": "^2.7.0",
     "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
-    "material-ui": "^1.0.0-beta.42",
+    "material-ui": "^1.0.0-beta.43",
     "material-ui-bottom-sheet": "^0.5.1",
     "mockfirebase": "^0.12.0",
     "prop-types": "^15.6.1",
