--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.46.2",
+    "firebase-mock": "^2.2.2",
     "flow-bin": "^0.69.0",
     "prettier": "^1.11.1",
     "react-scripts": "1.1.1"
@@ -19,11 +20,14 @@
     "firebase": "^4.12.1",
     "firebaseui": "^2.7.0",
     "geofire": "^4.1.2",
+    "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
     "leaflet": "^1.3.1",
     "material-ui": "^1.0.0-beta.43",
     "material-ui-bottom-sheet": "^0.5.1",
     "mockfirebase": "^0.12.0",
     "prop-types": "^15.6.1",
+    "proxyquire": "^2.0.1",
     "react": "^16.3.0",
     "react-compound-slider": "^0.11.0",
     "react-custom-scrollbars": "^4.2.1",
