--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "geofire": "^4.1.2",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
+    "jsdom": "^11.10.0",
     "leaflet": "^1.3.1",
     "material-ui": "^1.0.0-beta.42",
     "material-ui-bottom-sheet": "^0.5.1",
