--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
     "eslint-plugin-flowtype": "^2.46.2",
     "firebase-mock": "^2.2.2",
     "flow-bin": "^0.69.0",
-    "prettier": "^1.11.1",
-    "react-scripts": "1.1.1"
-  },
-  "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "chai": "^4.1.2",
-    "firebase": "^4.12.1",
-    "firebase-mock": "^2.2.2",
-    "firebaseui": "^2.7.0",
-    "geofire": "^4.1.2",
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
     "jsdom": "^11.10.0",
+    "prettier": "^1.11.1",
+    "react-scripts": "1.1.1",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
+    "chai": "^4.1.2"
+  },
+  "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
+    "firebase": "^4.12.1",
+    "firebaseui": "^2.7.0",
+    "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
     "material-ui": "^1.0.0-beta.43",
     "material-ui-bottom-sheet": "^0.5.1",
-    "mockfirebase": "^0.12.0",
     "prop-types": "^15.6.1",
-    "proxyquire": "^2.0.1",
     "react": "^16.3.0",
     "react-compound-slider": "^0.11.0",
     "react-custom-scrollbars": "^4.2.1",
@@ -38,8 +37,6 @@
     "react-leaflet": "^1.9.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "sinon": "^4.5.0",
-    "sinon-chai": "^3.0.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
