--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "geofire": "^4.1.2",
     "leaflet": "^1.3.1",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "^16.3.0",
     "react-compound-slider": "^0.11.0",
     "react-custom-scrollbars": "^4.2.1",
